2003-03-26	ujwal

    * Created a new target "iTerm Framework" in the 
      project. This is the core of iTerm.app. The 
      iTerm application target just contains the 
      entry point source file and images. It then 
      links against the iTerm framework. This enables 
      other applications to link against iTerm framework 
      to embed iTerm functionality. 
      
    * Regrouped Preference and AddressBook elements into 
      separate NIB files. Created AddressBookWindowController 
      class.

2003-03-25	fabian
    * PTYTextView is now a subclass of NSView under ARRAY 
      mode. Text input works properly. 
    * Working selection and copy/paste 
        
2003-03-22	Ujwal S. Sathyam <ujwal@setlurgroup.com>
    
    * Added option-click support to position cursor.
    
    * Added keyboard shortcut to "Clear Buffer"

2003-03-20	fabian
    * Japanese localization patch from Yuichi OHKAWA
    * Imported all the website files into the project
    * New key combination for scrolling:
        cmd-Up/Down arrow: scroll one line up/down
        shift-cmd-Up/Down arrow: scroll one pague up/down
    * Added an alert window after configuration is saved.
    * Added shortcut option for address entry.
        Control-Option-Key: Open in new tab
        Shift-Control-Option-Key: Open in new window
      (not working when some input method is being used)
    
2003-03-19	fabian
    * Fixed some AddressBook interface issues
    * Corrected typos in Korean localizations
    * Updated help files
    * finalize the release of 0.6.5
    
2003-03-18	fabian
    * Added Korean localization provided by TaeYoung Oh
    * Updated Chinese nib files for new option.

2003-03-18	Ujwal S. Sathyam <ujwal@setlurgroup.com>
    * Added explicit preference to warn on quitting 
      or closing a window/tab.
      
2003-03-14	fabian
    * Decrease the brightness of default color to give it
      more contrast to the highlight
    * Fixed a bug related to input CJK.